--- a/admin/src/web/templates/jya/show.html
+++ b/admin/src/web/templates/jya/show.html
@@ -30,6 +30,7 @@
     <div class="card-body">
         <h5 class="card-title">{{ rider.name }} {{ rider.last_name }}</h5>
         <p class="card-text">
+            <h5 class="border-bottom border-dark pb-2"></h5>
             <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Datos
                 personales:</strong>
             <strong style="margin-left: 20px;">DNI:</strong> {{ rider.dni }}<br>
@@ -57,6 +58,12 @@
             <strong style="margin-left: 20px;">Número de obra social:</strong> {{ rider.health_insurance_number }}<br>
             <strong style="margin-left: 20px;">Tiene curantela:</strong> {% if rider.has_guardianship %}Sí{% else %}No{%
             endif %}<br>
+
+            <a href="{{ url_for('jya.update_general', id=rider.id) }}" class="btn btn-warning btn-icon">
+                <i class="fas fa-edit"></i> Editar Información general
+            </a>
+
+            <h5 class="border-bottom border-dark pb-2"></h5>
             {% if rider.school %}
             <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Institución escolar a
                 la que concurre:</strong>
@@ -67,6 +74,30 @@
             <strong style="margin-left: 20px;">Año lectivo:</strong> {{ rider.school.year }}°<br>
             <strong style="margin-left: 20px;">Observaciones:</strong> {{ rider.school.observations }}<br>
             {% endif %}
+
+            {% if rider.job_proposal %}
+            <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Trabajo en
+                CEDICA:</strong>
+            <strong style="margin-left: 20px;">Propuesta de trabajo institucional:</strong> {{
+            rider.job_proposal.institutional_work_proposal }}<br>
+            <strong style="margin-left: 20px;">Condición:</strong> {{ rider.job_proposal.condition }}<br>
+            <strong style="margin-left: 20px;">Sede:</strong> {{ rider.job_proposal.headquarters }}<br>
+            <strong style="margin-left: 20px;">Días:</strong> {{ rider.job_proposal.days | join(', ') }}<br>
+            <strong style="margin-left: 20px;">Profesor:</strong> {{ rider.job_proposal.professor.name }} {{ rider.job_proposal.professor.last_name
+            }}<br>
+            <strong style="margin-left: 20px;">Conductor del caballo:</strong> {{ rider.job_proposal.member_horse_rider.name }} {{
+            rider.job_proposal.member_horse_rider.last_name }}<br>
+            <strong style="margin-left: 20px;">Caballo:</strong> {{ rider.job_proposal.horse.name }}<br>
+            <strong style="margin-left: 20px;">Asistente:</strong> {{ rider.job_proposal.assistant.name }} {{ rider.job_proposal.assistant.last_name
+            }}<br>
+            {% endif %}
+
+            <a href="{{ url_for('jya.update_school_job', id=rider.id) }}" class="btn btn-warning btn-icon">
+                <i class="fas fa-edit"></i> Editar Información escolar y laboral
+            </a>
+
+            <h5 class="border-bottom border-dark pb-2"></h5>
+
             {% if rider.tutor_1_id or rider.tutor_2_id %}
             <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Datos del
                 tutor:</strong>
@@ -95,6 +126,12 @@
             <strong style="margin-left: 40px;">Trabajo:</strong> {{ rider.tutor_2.job }}<br>
             {% endif %}
             {% endif %}
+
+            <a href="{{ url_for('jya.update_tutor', id=rider.id) }}" class="btn btn-warning btn-icon">
+                <i class="fas fa-edit"></i> Editar Información de los tutores
+            </a>
+            <h5 class="border-bottom border-dark pb-2"></h5>
+
             {% if rider.members %}
                 <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Profesionales que lo
                     atienden:</strong>
@@ -104,22 +141,11 @@
                     <strong style="margin-left: 40px;">DNI:</strong> {{ member.dni }}<br>
                 {% endfor %}
             {% endif %}
-            {% if rider.job_proposal %}
-            <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Trabajo en
-                CEDICA:</strong>
-            <strong style="margin-left: 20px;">Propuesta de trabajo institucional:</strong> {{
-            rider.job_proposal.institutional_work_proposal }}<br>
-            <strong style="margin-left: 20px;">Condición:</strong> {{ rider.job_proposal.condition }}<br>
-            <strong style="margin-left: 20px;">Sede:</strong> {{ rider.job_proposal.headquarters }}<br>
-            <strong style="margin-left: 20px;">Días:</strong> {{ rider.job_proposal.days | join(', ') }}<br>
-            <strong style="margin-left: 20px;">Profesor:</strong> {{ rider.job_proposal.professor.name }} {{ rider.job_proposal.professor.last_name
-            }}<br>
-            <strong style="margin-left: 20px;">Conductor del caballo:</strong> {{ rider.job_proposal.member_horse_rider.name }} {{
-            rider.job_proposal.member_horse_rider.last_name }}<br>
-            <strong style="margin-left: 20px;">Caballo:</strong> {{ rider.job_proposal.horse.name }}<br>
-            <strong style="margin-left: 20px;">Asistente:</strong> {{ rider.job_proposal.assistant.name }} {{ rider.job_proposal.assistant.last_name
-            }}<br>
-            {% endif %}
+
+            <a href="{{ url_for('jya.update_tutor', id=rider.id) }}" class="btn btn-warning btn-icon">
+                <i class="fas fa-edit"></i> Editar profesionales que lo atienden
+            </a>
+
         </p>
     </div>
 </div>
