--- a/admin/src/web/templates/jya/show.html
+++ b/admin/src/web/templates/jya/show.html
@@ -142,7 +142,7 @@
                 {% endfor %}
             {% endif %}
             <br>
-            <a href="{{ url_for('jya.update_tutor', id=rider.id) }}" class="btn btn-warning btn-icon">
+            <a href="{{ url_for('jya.update_professional', id=rider.id) }}" class="btn btn-warning btn-icon">
                 <i class="fas fa-edit"></i> Editar profesionales que lo atienden
             </a>
 
